terraform/security_group.tf
resource "aws_security_group" "cassandra_security_group" {
  vpc_id      = var.VPC_ID
  name        = "${var.ENVIRONMENT}-${var.NAME}-security-group"
  description = "Cassandra Security Group that allows SSH and access on port 9042 and 7000"

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 9042
    to_port     = 9042
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 7000
    to_port     = 7000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.ENVIRONMENT}-${var.NAME}-security-group"
  }
}
